# lustre-compiler

./: .gitmodules  LICENSE  README.md  cabal.project
compiler/: lustre.cabal
compiler/exe/: Main.hs
compiler/src/Lustre/: Compiler.hs  Utils.hs
compiler/src/Lustre/Compiler/: Monad.hs  Options.hs
compiler/src/Lustre/Compiler/IR/: Base.hs  Lustre.hs  NLustre.hs  Obc.hs  Scf.hs  Stc.hs
compiler/src/Lustre/Compiler/IR/Lustre/: Compat.hs
compiler/src/Lustre/Compiler/IR/NLustre/: Syntax.hs
compiler/src/Lustre/Compiler/IR/Obc/: Syntax.hs
compiler/src/Lustre/Compiler/IR/Scf/: Syntax.hs
compiler/src/Lustre/Compiler/IR/Stc/: Syntax.hs
compiler/src/Lustre/Compiler/Passes/: Codegen.hs  Normalize.hs  Schedule.hs  Simplify.hs  ToObc.hs  ToScf.hs  ToStc.hs
examples/: .gitignore  cycle.lus  test1.lus  test2.lus  test3.lus  test6.lus  test8.lus  test_enums.lus  test_struct_create.lus  test_struct_create_select.lus  test_struct_update.lus
