cabal-version:      2.2

name:               lustre
version:            0.1
license-file:       LICENSE
author:             Chaitanya Koparkar
build-type:         Simple

common base
    default-language:   GHC2021
    build-depends:      base >= 4.17 && <5
    ghc-options:        -Wall -Wcompat

library
    import:           base
    hs-source-dirs:   src
    exposed-modules:  Lustre.Compiler
                      Lustre.Compiler.IR.Lustre
                      Lustre.Compiler.IR.NLustre
                      Lustre.Compiler.IR.Stc
                      -- Lustre.Compiler.IR.Obc
    other-modules:    Lustre.Utils
                      Lustre.Compiler.Options
                      Lustre.Compiler.Monad
                      Lustre.Compiler.IR.Base
                      Lustre.Compiler.IR.NLustre.Syntax
                      Lustre.Compiler.IR.Stc.Syntax
                      -- Lustre.Compiler.IR.Obc.Syntax
                      Lustre.Compiler.Passes.Normalize
                      Lustre.Compiler.Passes.ToStc
                     -- Lustre.Compiler.Passes.ToObc
                     Lustre.Compiler.Passes.Schedule
                     -- Lustre.Compiler.Passes.Codegen
    build-depends:    language-lustre
                    , text
                    , containers
                    , mtl
                    , monad-gen
                    , directory
                    , filepath
                    , prettyprinter
                    , alex-tools
                     -- , language-c-quote
                     -- , mainland-pretty
                     -- , srcloc
    ghc-options:      -fdefer-typed-holes

executable lustre-compiler
    import:           base
    hs-source-dirs:   exe
    main-is:          Main.hs
    build-depends:    lustre
